# embind11

./: CMakeLists.txt  README.md  build.sh  build_all.sh  embed.cpp  embind11.html  embind11_side.cpp  embind11_side2.cpp  extern_pre.js  post.js  pre.js  usage.html
examples/: canvas.py  create_buttons.py  working.py
include/embind11/: convert.hpp
src/: convert.cpp  export_js_module.cpp  macro_magic.hpp  pure_python_init.cpp  val.cpp
src/js/: export_js_module.cpp  export_py_eval.cpp  export_py_interpreter.cpp  export_py_object.cpp
src/py/: convert.cpp  export_embind11_module.cpp  export_js_proxy.cpp  macro_magic.hpp  pure_python_init.cpp
